Add comment 18 to config/settings.json for day 1

--- a/config/settings.json
+++ b/config/settings.json
@@ -2,3 +2,11 @@
   "api_key": "",
   "network": "mainnet"
 }
+{
+  "api_key": "",
+  "network": "mainnet",
+  "tokens": {
+    "USDT": "0xdAC17F958D2ee523a2206206994597C13D831ec7",
+    "DAI": "0x6B175474E89094C44Da98b954EedeAC495271d0F"
+  }
+}# Comment 18 for day 1
